Fixed small css bug on mobile screen for the menu i.e. changed the cursor to default for the unclickable area.

--- a/scss/_hamburgerMenu.scss
+++ b/scss/_hamburgerMenu.scss
@@ -69,11 +69,13 @@ span.toggle {
     width: 100%;
   }
   .core-menu {
-    float: right;
-    width: 100%;
     background: $darkblue;
-    margin: auto;
+    cursor: default;
     display: none;
+    float: right;
+    margin: auto;
+    width: 100%;
+    z-index: 2;
   }
 
   .hamburger-menu {
